--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -11,13 +11,11 @@
 {{/block}}
 <body>
 <header id="header">
-    <nav id="nav-bar">
+    <ul class="nav" id="nav">
+        <li role="presentation" class="active"><a href="/">HOME</a></li>
+        <li role="presentation"><a  href="/view">VIEW SIGHTINGS</a></li>
+    </ul>
 
-        <a class="nav-link" href="/">HOME</a>
-        <a class="nav-link" href="/form">ADD ANIMAL</a>
-        <a class="nav-link" href="/view">VIEW SIGHTINGS</a>
-
-    </nav>
 
 </header><div class="container">
     <div class="col-md-12">
