--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -17,7 +17,7 @@
                         <br>
                         <br>
                         <form action="/view" method="post">
-                            <h2>Animal Sighting</h2>
+                            <h1>Animal Sighting</h1>
                             <div class="form-group">
                                 <label for="rangerName">Ranger's Name</label>
                                 <div class="text">
@@ -69,7 +69,7 @@
                                     <option value="endangered">Endangered</option>
                                 </select>
                             <hr>
-                            <button type="submit" class="button">Submit</button>
+                            <button type="submit" class="btn btn-warning">Submit</button>
                         </form>
 
                     </div>
