--- a/src/main/resources/templates/view.hbs
+++ b/src/main/resources/templates/view.hbs
@@ -6,29 +6,16 @@
     <h1>Recorded Sightings</h1>
     <br>
     <br>
-        <tr>
-            <th scope="col">Ranger's Name</th>
-            <th scope="col">Location</th>
-            <th scope="col">Animal Name</th>
-            <th scope="col">Animal Age</th>
-            <th scope="col">Animal Health</th>
-            <th scope="col">Animal Species</th>
-            <th scope="col">Time of sighting</th>
-        </tr>
-        </thead>
-        <tbody>
-        {{#each sightings}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{location}}</td>
-                <td>{{animal.name}}</td>
-                <td>{{animal.age}}</td>
-                <td>{{animal.health}}</td>
-                <td>{{animal.type}}</td>
-                <td>{{timestamp}}</td>
-            </tr>
+    {{#each animals }}
+        <p>Animal Name : {{name}}</p>
+            <p>Animal Age : {{age}}</p>
+            <p>Animal Health : {{health}}</p>
+            <p>Animal Species : {{type}}</p>
         {{/each}}
-        </tbody>
-    </table>
+    {{#each sightings }}
+    <p>Ranger's Name : </p>
+    <p>Location : {{location}}</p>
+    <p>Time of sighting : {{timestamp}}</p>
+    {{/each}}
 {{/partial}}
 {{>layout.hbs}}
